# licznik

./: CMakeLists.txt  zadanie.md
files/: biblia-it.txt  biblia-pl.txt  lena.ppm  test.ppm  test.txt
inc/: FreqCounter.h  csv.h  ui.h
lib/Csv/: Csv.cpp  Csv.h
lib/Visualizer/: BarChart.cpp  BarChart.h  Visualizer.cpp  Visualizer.h
lib/debug/: debug.h
lib/ppm/: debug.h  helpers.cpp  helpers.h  main.cpp  obraz.cpp  obraz.h  pgm.cpp  pgm.h  pgm_parser.cpp  pgm_parser.h  pixel.h  pixelGrayscale.h  pixelRGB.h  ppm.cpp  ppm.h  ppm_parser.cpp  ppm_parser.h  state_machine.h  states.h
src/: main.cpp
test/: test_csv.cpp
test/tmp/: test.txt
